@@ -1,5 +1,9 @@
 X3 C++ PluginFramework
 
+2011-06-17
+
+    * Remove Ix_ObjectFactory::HasCreatorReplaced, SpecialInterfaceObject.
+
 ------v1.0.10------
 
 2011-06-16
